src/test/deca/context/valid/op_comp_valid_01.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 11: Compare operation type mismatch
//
// Historique:
//    cree le 01/01/2023

{
    boolean a = true == true;
}
