src/test/deca/context/invalid/sans_objet/op_unaryMinus_mismatch.deca
// Description:
//     Operateur unaryMinus avec une valeure non float ou int.
//
// Resultats:
//    Ligne 11: Operator UnaryMinus type mismatch
//
// Historique:
//    cree le 01/01/2023

{
   float x = -true;
}
